# tight-budget-llm-adaptation

./: .gitignore  CITATION.bib  Dockerfile  LICENSE  README.md  args.py  pyproject.toml  train.py
cfgs/: deepfocus.yml  hindsight.yml  main.yml  perf-search2.yml
dlib/: __init__.py  checkpointing.py  dist_utils.py  get_optimizer.py  lr_schedules.py  model_profiling.py  speed_monitor.py  utils.py
dlib/data/: data_download.py  data_tokenization.py  dataset.py
helpers/: entrypoints.py  mokey_patch_fa_packing.py  printers.py  smart_heuristics.py  unicode_table.txt
helpers/main-exp-deps/: Dockerfile.condalock  conda-lock.yml  environment.yml
scripts/: run-docker-rootless.sh  run-docker.sh  run-slurm.sh  train_fasttext.py  train_sentencepiece.py
scripts/perf_benchmarking/: analyze_logs.py  run_benchmarks.sh
tokenizers/ar/sp-bpe-ar-32kauto/: tokenizer.json  tokenizer.model  tokenizer_config.json
tokenizers/de/sp-bpe-de-32kauto/: tokenizer.json  tokenizer.model  tokenizer_config.json
